2008-12-09  Dmitry Titov  <dimich@chromium.org>

Reviewed by Darin Adler.

        Fix memory leak - need to call stopActiveDOMObjects
        when cached pages get destroyed.
        https://bugs.webkit.org/show_bug.cgi?id=22753

        * dom/Document.cpp:
        (WebCore::Document::detach):


git-svn-id: svn://svn.chromium.org/blink/trunk@39193 bbb929c8-8fbe-4397-9dbb-9b2b20218538