third_party/WebKit/WebCore/dom/Document.cpp
@@ -1279,6 +1279,7 @@ void Document::detach()
     ASSERT(!m_inPageCache);
 
     clearAXObjectCache();
+    stopActiveDOMObjects();
     
     RenderObject* render = renderer();
 
